kubernetes.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  generation: 5
  labels:
    app: java-sample
  name: java-sample
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: java-sample
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: java-sample
        revision: "1"
    spec:
      containers:
      - image: marthydavid/docker-java-sample-webapp:latest
        imagePullPolicy: Always
        name: java-sample
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-sample
  name: java-sample
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: java-sample
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers Server;
      more_set_headers 'Server: otp';
      more_clear_headers 'X-Powered-By';
      server_tokens off;
    nginx.ingress.kubernetes.io/rewrite-target: /docker-java-sample-webapp-1.0-SNAPSHOT
  name: java-sample
spec:
  rules:
  - host: java-sample.marthy.xyz
    http:
      paths:
      - backend:
          servicename: java-sample
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - java-sample.marthy.xyz
    secretName: java-sample
